# Figures

./: README.adoc
src/: CMakeLists.txt  application.cpp  circle.cpp  circle.h  circleFactory.cpp  circleFactory.h  circleReader.cpp  circleReader.h  cloneable.h  compareDoubles.cpp  figure.h  figureFactory.h  figureReader.h  library.cpp  library.h  randomFigureFactory.cpp  randomFigureFactory.h  rectangle.cpp  rectangle.h  rectangleFactory.cpp  rectangleFactory.h  rectangleReader.cpp  rectangleReader.h  streamFigureFactory.cpp  streamFigureFactory.h  stringConvertible.h  stringToFigure.cpp  stringToFigure.h  triangle.cpp  triangle.h  triangleFactory.cpp  triangleFactory.h  triangleReader.cpp  triangleReader.h
test/: CMakeLists.txt  test-circle.cpp  test-randfactory.cpp  test-reader.cpp  test-rectangle.cpp  test-strFactory.cpp  test-streamfactory.cpp  test-triangle.cpp
